--- a/package.json
+++ b/package.json
@@ -67,9 +67,10 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node scripts/start.js server",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "server": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
